// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Cordial's removeProductFromCart destination action: all fields 1`] = `
Object {
  "anonymousId": "F]%Twm",
  "productID": "F]%Twm",
  "qty": -7760764634923008,
  "segmentId": "F]%Twm",
  "segmentIdKey": "F]%Twm",
  "userIdentities": Object {
    "testType": "F]%Twm",
  },
}
`;

exports[`Testing snapshot for Cordial's removeProductFromCart destination action: required fields 1`] = `
Object {
  "productID": "F]%Twm",
  "qty": -7760764634923008,
  "segmentIdKey": "F]%Twm",
}
`;
